# ai103

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  ai103.code-workspace  create-clip-titles.txt  fixes-to-make.md
infra/: ai103-core.bicep
lesson-demo-apps/azure-appinsights-node-sample-app/: package-lock.json
lesson-demo-apps/globomantics-secure-scan-1/express-testapp/: package-lock.json  package.json
lesson-demo-apps/tim-chat-front-end/: package-lock.json  package.json
lesson-demo-apps/tim-chat-front-end/frontend/: package-lock.json  package.json
lesson-demo-apps/tim-chat-front-end/ideas-for-pondering/ChatGPT-2-dev/: package.json  pnpm-lock.yaml
lesson-demo-apps/tim-chat-front-end/ideas-for-pondering/ChatGPT-2-dev/src-tauri/: Cargo.toml
lesson-demo-apps/woodgrove-bank/: package.json
lessons/: README.md
lessons/01-choose-foundry-services/: .env.example  README.md  m01_agent_demo.ipynb  m01_agent_demo.py  model_bakeoff.py  pyproject.toml
lessons/01-plan-azure-ai/: .env.example  README.md  m01_agent_demo.py  requirements.txt
lessons/02-set-up-ai-solutions-foundry/: .env.example  README.md  m02_setup_demo.ipynb  m02_setup_demo.py  pyproject.toml
lessons/03-manage-monitor-secure-ai/: README.md
lessons/04-manage-monitor-secure-ai/: README.md
lessons/05-responsible-ai-generative-agentic/: README.md
lessons/06-build-generative-apps-foundry/: README.md
lessons/07-optimize-operationalize-genai/: README.md
lessons/07-optimize-operationalize-genai/node-demo/: .env.sample  generate.js  package.json
lessons/08-build-generative-apps-foundry/: README.md
lessons/09-build-generative-apps-foundry/: README.md
lessons/10-build-agents-foundry/: README.md
lessons/10-build-agents-foundry/node-demo/: .env.sample  index.js  package.json
lessons/11-build-agents-foundry/: README.md
lessons/12-image-video-generation/: README.md
lessons/13-multimodal-understanding/: README.md
lessons/13-multimodal-understanding/node-demo/: .env.sample  app.js  package.json
lessons/14-responsible-ai-multimodal/: README.md
lessons/15-language-model-text-analysis/: README.md
lessons/15-language-model-text-analysis/node-demo/: .env.sample  package.json  translate.js
lessons/16-speech-solutions/: README.md  speech-to-text-demo.js
lessons/17-retrieval-grounding-pipelines/: README.md
lessons/18-extract-content-documents/: README.md
